# crewai-ollama-setup

./: .dockerignore  .env.example  .env.template  .flake8  .gitignore  Dockerfile.crewai  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-deploy.txt  requirements-train.txt  requirements.txt  setup.py
agents/: __init__.py  custom_agent.py
automation/: __init__.py  news_pipeline.py
compose/: README.md  docker-compose.redis-password-option-a.yml  docker-compose.redis-password-option-b.yml  docker-compose.scenario-local-default-d4a0.yml  docker-compose.scenario-low-resource-d4a0.yml  docker-compose.scenario-monitoring-d4a0.yml  docker-compose.scenario-news-autofinetune-d4a0.yml  docker-compose.scenario-news-ingest-d4a0.yml  docker-compose.scenario-staging-autopilot-d4a0.yml  docker-compose.scenario.news-autopilot.yml
config/: __init__.py  agent_registry.yaml  deploy_config.yaml  model_registry.json  model_registry.yaml  prometheus.yml  settings.py
crew_cli/: __init__.py  __main__.py  agents.py  config.py  models.py  utils.py
crewai_cli/: __init__.py  __main__.py  agents.py  cli.py  config.py  models.py  utils.py
crewctl/: __init__.py  __main__.py  agent.py  cli.py  config.py  configuration.py  model.py  ollama.py  training.py  utils.py
crews/: __init__.py  custom_crew.py
deployment/: config.yml  deploy.py  ollama_checksums.json
retraining/: __init__.py  autopilot.py  manager.py  planner.py  strategies.py
scripts/: bootstrap.sh  deploy.py  run-tests-docker.sh  (+2 more)
(+32 files in other folders)
